# LiveFootballStreamingHD

./: .gitignore  Untitled  build.gradle  local.properties  settings.gradle
app/: .gitignore  build.gradle  proguard-rules.pro
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  file1.cpp  file10.cpp  file11.cpp  file12.cpp  file13.cpp  file14.cpp  file15.cpp  file16.cpp  file17.cpp  file18.cpp  file19.cpp  file2.cpp  file20.cpp  file21.cpp  file22.cpp  file23.cpp  file24.cpp  file25.cpp  file26.cpp  file27.cpp  file28.cpp  file29.cpp  file3.cpp  file30.cpp  file31.cpp  file32.cpp  file33.cpp  file34.cpp  file35.cpp  file36.cpp  file37.cpp  file38.cpp  file39.cpp  file4.cpp  file40.cpp  file5.cpp  file6.cpp  file7.cpp  file8.cpp  (+2 more)
app/src/main/res/anim/: fade_in.xml
app/src/main/res/drawable/: back_latest.xml  bg_box_more.xml  bg_live_may.xml  bottom_navigation_drawer.xml  brightnessfull.xml  cancel.xml  channelbackground.xml  circle_background.xml  event_icon.xml  events_shape_bg.xml  feedback.xml  fit_mode.xml  forward.xml  games_active.xml  games_inactive.xml  home_active.xml  home_inactive.xml  ic_ad_blocker.xml  ic_baseline_search_24.xml  ic_bell.xml  ic_filter.xml  ic_full_screen.xml  ic_live.xml  ic_locked.xml  ic_more.xml  ic_privacy_policy_icon.xml  ic_volume_low_grey600_36dp.xml  ic_volume_medium_grey600_36dp.xml  list.xml  mic.xml  more_active.xml  more_inactive.xml  more_item_draw.xml  more_items_draw.xml  more_screen_background.xml  new2_draw.xml  new_channel_bg_may.xml  new_dot_bg_channel.xml  new_draw4.xml  notification1.xml  (+11 more)
app/src/main/res/layout/: activity_exo_test_player.xml  activity_main.xml  activity_splash.xml  app_update_layout.xml  categories_fragment.xml  custom_layout2.xml  exo_playback_control_view.xml  fragment_channels.xml  gameactive.xml  gameinactive.xml  home_fragment.xml  homeactive.xml  homeinactive.xml  item_layout_categories.xml  item_layout_channels.xml  item_layout_events.xml  item_layout_popular.xml  item_layout_recommended.xml  layout_fb_native_ad.xml  more_screen_layout.xml  moreactive.xml  moreinactive.xml  native_ad_layout.xml  notification_layout.xml  notifications_layout.xml
app/src/main/res/menu/: browse.xml  menu.xml  menu_bottombar.xml  top_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/raw/: home_loading.json
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
gradle/wrapper/: gradle-wrapper.properties
(+60 files in other folders)
